--- a/trunk/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
+++ b/trunk/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
@@ -6,9 +6,9 @@ HVSC Dir=
 EnableDatabase=true
 ;Default song length [mm:]ss (will be used, if the song length database does not contain related entries or is disabled)
 Default Play Length=03:00
-; Default fade-in time [mm:]ss (audio volume will be increased to the max)
+; Default fade-in time [mm:]ss (audio volume will be increased to the max - 00:00 means disabled)
 Fade In Time=00:00
-; Default fade-out time [mm:]ss (audio volume should be lowered to zero)
+; Default fade-out time [mm:]ss (audio volume will be lowered to zero - 00:00 means disabled)
 Fade Out Time=00:00
 ;Loop a tune (turn on to repeat a single tune)
 Loop=false
@@ -77,9 +77,9 @@ SecondVolume=0
 ; Volume of a third SID chip (3-sid) -6db..6db
 ThirdVolume=0
 ; Panning feature: spreading of the SID chip sound signal to the two stereo channels 0(left speaker)..0.5(centered)..1(right speaker)
-MainBalance=0.0
+MainBalance=0.5
 ; Panning feature: spreading of a second SID chip sound signal to the two stereo channels 0(left speaker)..0.5(centered)..1(right speaker)
-SecondBalance=1.0
+SecondBalance=0.5
 ; Panning feature: spreading of a third SID chip sound signal to the two stereo channels 0(left speaker)..0.5(centered)..1(right speaker)
 ThirdBalance=0.5
 
@@ -94,9 +94,9 @@ UserEmulation=DEFAULT
 StereoEmulation=DEFAULT
 ; Force to use specific SID emulation engine for the 3-SID (DEFAULT,RESID,RESIDFP)
 3rdSIDEmulation=DEFAULT
-; Sets the default system clock when the tune doesn't specify its preferred clock.
+; Sets the default system clock when the tune doesn't specify its preferred clock (PAL,NTSC).
 DefaultClockSpeed=PAL
-; Ignores the tune's system clock and instead uses this value in every case.
+; Ignores the tune's system clock and instead uses this value in every case (<nothing>,PAL,NTSC).
 UserClockSpeed=
 ; Sets the default sid model when the tune doesn't specify its preferred model (MOS6581,MOS8580)
 DefaultSidModel=MOS6581
@@ -110,7 +110,12 @@ StereoSidModel=AUTO
 ; because we always want to match the correct HardSID4U chip according to the tune.
 ; The stereo device will always be the other one.
 ; And for 3-SID always the next available device not configured here is matched.
-; E.g. Mono: Use chip 0 for 6581 and chip 1 for 8580 (Stereo: use 0 and 1, 3-SID use 0, 1 and 2)
+; Default configuration:
+; - mono tune? Use chip 0 for 6581 or chip 1 for 8580
+; - 6581 stereo tune? Use 0 and 1
+; - 8680 stereo tune? Use 1 and 0
+; - 6581 3-SID tune? Use 0 and 1 and 2)
+; - 8580 3-SID tune? Use 1 and 0 and 2)
 HardSID6581=0
 HardSID8580=1
 ; Use this to enable or disable the mono SID internal filter.
@@ -119,9 +124,9 @@ UseFilter=true
 UseStereoFilter=true
 ; Use this to enable or disable a 3-SID internal filter.
 Use3rdSIDFilter=true
-; For fake stereo (two SIDs at the same address): which SID chip should be read
+; For fake stereo (two SIDs at the same address): which SID chip should execute reads
 SidNumToRead=0
-; Use Digiboost hack for 6581/8580
+; Use Digiboost hack for 8580
 DigiBoosted8580=false
 ; Base address of the stereo SID chip (if it could not be detected).
 dualSidBase=0xd420
