filter lib jars

--- a/jsidplay2/pom.xml
+++ b/jsidplay2/pom.xml
@@ -211,6 +211,7 @@
 							<outputDirectory>${project.build.directory}/standalone</outputDirectory>
 							<includeScope>runtime</includeScope>
 							<excludeScope>provided</excludeScope>
+							<excludeArtifactIds>jinput-platform</excludeArtifactIds>
 						</configuration>
 					</execution>
 					<execution>
