New -------- 4-Mat Algorithm/8bitDigi Algorithm/Frodigi Bacco_Digi Bernhard_Arenz Christian_Hikl Harri_Palviainen Input64 Mindcooler Rene_Romijn Scout_Digi Sentinel Softidea Ulrich_Muehl (MoN/Bantam) ?Commodore ?Unknown_8
changed
-------
MoN/Deenen: Added 1 ID, finds 2 more
System6581: Simplified, finds 2 more

--- a/jsidplay2/src/main/resources/libsidutils/sidid.cfg
+++ b/jsidplay2/src/main/resources/libsidutils/sidid.cfg
@@ -15,13 +15,18 @@ A9 1F 8D 18 D4 A2 46 BD ?? ?? 95 01 END
 
 20CC
 D0 ED C9 E0 B0 10 29 1F 7D END
-AD ?? ?? 4A 6A 6A 6A 05 ?? 8D ?? D4 AD ?? ?? 8D ?? D4 ?? ?? ?? 0D ?? ?? 8D 18 D4 END
+FE ?? ?? D0 ?? DE ?? ?? A0 ?? 98 9D ?? ?? 5E ?? ?? 1E ?? ?? BD ?? ?? BC ?? ?? 99 04 D4 END
 B4 ?? B1 ?? C9 FF F0 08 F6 ?? BC ?? ?? 99 04 D4 B4 ?? B1 ?? C9 ?? F0 ?? F6 END
 A9 00 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? E8 E0 03 D0 D1 8D ?? ?? 8D ?? ?? 8D ?? ?? 8D ?? ?? 8D 04 D4 8D 0B D4 8D 12 D4 8D END
 BC ?? ?? A9 ?? 99 04 D4 A9 ?? 99 01 D4 FE END
 86 FC 8E 17 D4 8E 16 D4 C8 C8 B9 ?? ?? 9D ?? ?? B9 ?? ?? 9D ?? ?? A9 ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? A9 01 9D ?? ?? 9D ?? ?? 9D END
 99 05 D4 68 99 06 D4 BD ?? ?? 29 40 F0 05 A9 00 99 04 D4 BD ?? ?? 4A 90 49 BC ?? ?? B9 ?? ?? 29 0F D0 08 8D 17 D4 8D ?? ?? F0 37 A0 00 D0 33 8D END
 29 ?? 4A 4A 4A 4A A8 46 ?? 66 ?? 88 10 END
+
+4-Mat
+18 98 69 0C A8 EE FC END
+A0 07 B5 02 9D 00 D4 E8 88 D0 F7 END
+29 0F 85 ?? B9 ?? ?? 29 01 AA BD ?? ?? 8D 04 D4 END
 
 4bitDigi/THCM
 60 ?? ?? ?? ?? ?? ?? 18 D4 E6 ?? ?? ?? 4C 0C DD BE END
@@ -37,6 +42,13 @@ CA 10 FD 88 D0 DD E6 FD D0 02 E6 END
 
 5_Dimension
 B9 ?? ?? 9D ?? ?? B9 ?? ?? 9D ?? ?? AC ?? ?? AD ?? ?? 8D 17 D4 AD ?? ?? 8D 16 D4 BD ?? ?? 99 01 D4 BD ?? ?? 99 00 D4 BD ?? ?? 3D ?? ?? 99 04 D4 END
+
+Algorithm/8bitDigi
+D0 E7 28 60 85 ?? 4C 10 00 8D END
+
+Algorithm/Frodigi
+EC 12 D0 D0 FB E8 E8 EC 12 D0 D0 FB 88 D0 EF A9 END
+8A 4A 4A 4A 4A 29 03 A8 B9 END
 
 Audio_Effect_Editor
 06 ?? 90 0D A2 00 B1 ?? C8 9D ?? ?? E8 E0 04 D0 F5 END
@@ -126,11 +138,17 @@ BD ?? ?? 38 E5 ?? 9D ?? ?? 8D 16 D4 A0 ?? B1 ?? 48 END
 Audial_Arts/Cody
 8D 18 D4 A2 ?? 8E ?? ?? 20 ?? ?? AD ?? ?? D0 ?? BD ?? ?? F0 ?? 20 ?? ?? BD ?? ?? A8 29 ?? F0 ?? 20 ?? ?? 98 29 ?? F0 END
 
+Audial_Arts/Cody_Digi
+48 29 80 F0 1D 68 29 7F 18 7D END
+
 Audial_Revolution
 9D 01 D4 60 BD ?? ?? C9 05 F0 ?? BD ?? ?? C9 00 F0 ?? DE ?? ?? D0 ?? A9 05 END
 
 Audiomaster_V2
 20 F0 0E 4A 4A 4A 4A 4A 8D ?? ?? 8C ?? ?? 8C ?? ?? A0 00 B1 ?? D0 16 AD ?? ?? D0 0E A9 00 8D ?? ?? AD ?? ?? 8D 0B D4 8D ?? ?? 4C ?? ?? C9 FF F0 END
+
+Bacco_Digi
+24 ?? 30 12 4A 4A 4A 4A 4A 18 69 ?? 8D 18 D4 A9 80 85 END
 
 Background_MusicEditor
 99 00 D4 88 10 F7 60 8A 48 B1 ?? 29 0F 0A AA BD ?? ?? 8D ?? ?? E8 BD ?? ?? 8D ?? ?? B1 END
@@ -165,6 +183,9 @@ Ben_Daglish_2
 
 Berkeley
 C5 12 F0 0B A9 00 85 ?? A9 00 85 ?? 20 END
+
+Bernhard_Arenz
+2C EC 03 10 03 4C END
 
 Bo_Mellberg
 99 ?? ?? C0 00 D0 06 20 ?? ?? 4C ?? ?? C0 01 D0 06 20 END
@@ -262,6 +283,9 @@ C8 98 9D 04 D4 60 C0 80 D0 07 BD ?? ?? 9D 04 D4 60 END
 
 Chris_Walsh
 E9 00 8D ?? ?? AD ?? ?? 8D 0E D4 AD ?? ?? 8D 0F D4 CE ?? ?? AD ?? ?? C9 00 F0 1A AD ?? ?? 18 6D ?? ?? 8D ?? ?? 8D 10 D4 AD ?? ?? 6D ?? ?? 8D ?? ?? 8D 11 D4 60 A0 00 A9 10 8D 12 D4 B1 ?? C9 FF END
+
+Christian_Hikl
+EE ?? ?? AD ?? ?? C9 ?? D0 05 A9 00 8D ?? ?? AE ?? ?? A9 END
 
 Christoph_Bergmann
 AE ?? ?? BD ?? ?? 29 FE 9D ?? ?? AE ?? ?? 9D 04 D4 60 END
@@ -363,7 +387,7 @@ Thiel_Sound_System
 
 David_Whittaker
 CE ?? ?? 8E 04 D4 E8 8E 04 D4 END
-AD ?? ?? 8D 06 D4 AE ?? ?? 8E 04 D4 E8 8E 04 D4 END
+8D 06 D4 AE ?? ?? 8E 04 D4 E8 8E 04 D4 END
 AD ?? ?? 85 ?? AD ?? ?? 85 ?? A0 00 B1 ?? 8D ?? ?? C8 B1 ?? 8D ?? ?? 60 END
 B1 ?? F0 AND C8 B1 AND A9 ?? 8D 04 D4 A9 ?? 8D 04 D4 AND 69 02 85 END
 8D 08 D4 B9 ?? ?? 8D 0E D4 B9 ?? ?? 8D 0F D4 A9 ?? 8D 04 D4 END
@@ -544,10 +568,10 @@ BD ?? ?? 10 08 A9 ?? F0 0A C9 ?? F0 03 4C ?? ?? 4C END
 (GT_Editor)
 A9 ?? 1D ?? ?? 99 04 D4 BC ?? ?? B9 ?? ?? 29 ?? 0A 9D ?? ?? BD ?? ?? 30 ?? B9 END
 
-Geir_Tjelta_digi_1
+Geir_Tjelta_Digi_1
 8D 18 D4 4C ?? ?? 24 ?? 30 ?? 4A 4A 4A 4A 4C END
 
-Geir_Tjelta_digi_2
+Geir_Tjelta_Digi_2
 9D 00 D4 CA 10 FA A9 81 8D 0D DD AD 0D DD 60 AD ?? ?? CE ?? ?? 10 0B 8D ?? ?? D0 END
 
 Geir_Tjelta/MacroPlay
@@ -648,6 +672,9 @@ A9 69 8D 15 03 58 A9 0F 8D 18 D4 8D 38 D4 A9 00 8D FF 02 60 END
 HardTrack_Composer
 0A 0A 8D ?? ?? 68 29 F0 85 FB AD ?? ?? 29 0F 05 FB 1D ?? ?? 8D ?? ?? 8D 17 D4 END
 
+Harri_Palviainen
+A2 18 A9 00 9D 00 D4 CA E0 00 D0 F8 A0 00 B1 END
+
 Heathcliff/DigitalArts
 C8 B1 FE C9 A0 90 0A E9 A0 7D END
 
@@ -702,6 +729,9 @@ ICC/TheVoice
 ID_3.x
 AD ?? ?? C9 00 F0 2F C9 80 F0 2B AD ?? ?? 38 E9 80 90 14 8D ?? ?? AD END
 
+Input64
+F0 30 A9 00 8D 06 D4 8D 05 D4 8D 04 END
+
 Ivan_Del_Duca
 30 12 18 75 2B 95 2B 9D 00 D4 B5 2A 69 00 95 2A 9D 01 D4 60 18 69 80 8D ?? ?? B5 2B 38 E9 7F 95 END
 BD ?? ?? 9D ?? ?? 38 E9 ?? A8 B9 ?? ?? 9D ?? ?? B9 ?? ?? 9D END
@@ -727,67 +757,47 @@ JCH_NewPlayer
 A2 00 B9 ?? ?? 9D ?? ?? ?? ?? ?? B9 ?? ?? 9D ?? ?? ?? ?? ?? C8 C8 E8 E0 03 D0 END
 B1 ?? 30 ?? F0 ?? C9 7E F0 END
 AD ?? ?? F0 26 A2 03 B9 ?? ?? 3D ?? ?? 9D ?? ?? CA D0 F4 B9 ?? ?? 10 13 B9 ?? ?? 9D ?? ?? B9 ?? ?? 9D ?? ?? C8 C8 E8 E0 03 D0 ED A9 0F 8D END
-
 (JCH_NewPlayer_V1)
 BC ?? ?? B9 ?? ?? 48 29 0F 9D ?? ?? 68 29 F0 4A 4A 9D ?? ?? 9D ?? ?? A9 00 9D ?? ?? 38 FD ?? ?? 9D ?? ?? B9 ?? ?? 9D ?? ?? B9 ?? ?? 48 29 F0 9D ?? ?? 68 29 0F 9D ?? ?? B9 ?? ?? 9D ?? ?? B9 ?? ?? 48 29 F0 C9 10 D0 END
-
 (JCH_NewPlayer_V2)
 38 FD ?? ?? 9D ?? ?? B9 ?? ?? 9D ?? ?? E0 00 D0 ?? B9 ?? ?? 48 29 0F F0 ?? 0A 8D ?? ?? 8D ?? ?? 68 29 F0 18 6D ?? ?? 8D 18 D4 END
-
 (JCH_NewPlayer_V3)
 DE ?? ?? 30 ?? BD ?? ?? 85 ?? BD ?? ?? 85 ?? 4C ?? ?? C9 FD D0 ?? A9 00 8D ?? ?? 8D 12 D4 4C ?? ?? BD ?? ?? 85 ?? BD ?? ?? 85 ?? 4C END
-
 (JCH_NewPlayer_V4)
 4C ?? ?? 48 29 E0 C9 80 D0 ?? 68 29 1F 38 E9 0C 0A 9D ?? ?? C8 D0 ?? 68 A9 00 9D ?? ?? F0 ?? BD ?? ?? 85 ?? BD ?? ?? 85 ?? A0 00 B1 ?? 30 ?? F0 ?? C9 7E F0 ?? C9 7F END
-
 (JCH_NewPlayer_V5)
 C9 FF D0 ?? BD ?? ?? 9D ?? ?? 85 ?? BD ?? ?? 9D ?? ?? 85 ?? 4C ?? ?? 29 7F 0A 9D ?? ?? FE ?? ?? D0 ?? FE ?? ?? D0 ?? A8 B9 ?? ?? 85 END
 A8 B9 ?? ?? 9D ?? ?? B9 ?? ?? 9D ?? ?? FE ?? ?? A5 ?? 9D ?? ?? A5 ?? 9D ?? ?? 4C ?? ?? 48 29 E0 C9 C0 D0 END
-
 (JCH_NewPlayer_V6)
 C9 FF D0 ?? BD ?? ?? 9D ?? ?? 85 ?? BD ?? ?? 9D ?? ?? 85 ?? A0 00 B1 ?? 10 ?? C9 FF F0 ?? 29 7F 0A 9D ?? ?? FE ?? ?? D0 ?? FE END
-
 (JCH_NewPlayer_V7)
 A2 02 CE ?? ?? 10 ?? A9 01 8D ?? ?? F0 ?? 4C ?? ?? BD ?? ?? F0 ?? C9 03 D0 ?? BD ?? ?? 85 ?? BD ?? ?? 85 ?? A0 00 B1 ?? C9 FF END
-
 (JCH_NewPlayer_V8)
 B1 ?? C9 7F D0 ?? A9 00 9D ?? ?? BD ?? ?? 18 69 01 9D ?? ?? 85 ?? BD ?? ?? 69 00 9D ?? ?? 85 ?? A0 00 B1 ?? C9 FF END
-
 (JCH_NewPlayer_V9)
 A2 02 CE ?? ?? 10 ?? AD ?? ?? 8D ?? ?? D0 ?? BD ?? ?? D0 ?? 4C ?? ?? BD ?? ?? F0 ?? DE ?? ?? 4C ?? ?? BD AND B1 ?? C9 7F D0 ?? A9 00 9D ?? ?? A8 BD ?? ?? 18 69 01 9D ?? ?? 85 ?? BD ?? ?? 69 00 9D ?? ?? 85 ?? B1 ?? C9 FF END
 A2 02 CE ?? ?? 10 ?? A9 ?? 8D ?? ?? D0 ?? BD ?? ?? F0 ?? DE ?? ?? 4C ?? ?? BD ?? ?? 9D ?? ?? BD ?? ?? 85 ?? BD ?? ?? 85 ?? A0 00 98 END
-
 (JCH_NewPlayer_V10)
 B1 ?? C9 FF D0 ?? BD ?? ?? 9D ?? ?? BD ?? ?? 9D ?? ?? C9 FE D0 ?? A9 00 9D ?? ?? BC ?? ?? 99 04 D4 4C ?? ?? BD ?? ?? F0 ?? 4C ?? ?? BD ?? ?? 29 FE END
 A2 02 CE ?? ?? 10 ?? A9 02 8D ?? ?? AD ?? ?? D0 ?? BD ?? ?? F0 ?? DE ?? ?? 4C ?? ?? BD ?? ?? 9D ?? ?? BD ?? ?? 85 ?? BD ?? ?? 85 ?? A0 00 98 9D ?? ?? B1 ?? 10 ?? 29 7F END
-
 (JCH_NewPlayer_V11)
 8A A8 BD ?? ?? F0 ?? D9 ?? ?? D0 ?? 8D ?? ?? BC ?? ?? B9 ?? ?? 29 F0 C9 F0 D0 ?? AD ?? ?? 9D ?? ?? 4C ?? ?? DE ?? ?? 4C ?? ?? BD END
-
 (JCH_NewPlayer_V12)
 A2 02 BD ?? ?? D0 03 4C ?? ?? BD ?? ?? F0 08 A9 00 9D ?? ?? 4C ?? ?? BD ?? ?? C9 01 D0 05 FE ?? ?? D0 06 DE ?? ?? 4C ?? ?? BD ?? ?? 9D ?? ?? BD ?? ?? 85 ?? BD END
-
 (JCH_NewPlayer_V13)
 A2 02 BD ?? ?? C9 02 D0 ?? BC ?? ?? B9 ?? ?? BC ?? ?? 99 ?? ?? BC ?? ?? B9 ?? ?? BC ?? ?? 99 ?? ?? A9 09 99 ?? ?? CA 10 D9 A5 ?? 48 A5 ?? 48 END
-
 (JCH_NewPlayer_V14)
 A2 02 BD ?? ?? C9 02 D0 ?? BC ?? ?? B9 ?? ?? BC ?? ?? 99 ?? ?? BC ?? ?? B9 ?? ?? BC ?? ?? 99 ?? ?? AD ?? ?? F0 09 AD AND 98 9D ?? ?? B1 ?? 10 0F 0A 9D ?? ?? FE ?? ?? D0 03 FE ?? ?? C8 B1 ?? A8 END
-
 (JCH_NewPlayer_V15)
 A2 02 A5 ?? 48 A5 ?? 48 BD ?? ?? D0 03 4C AND BD ?? ?? F0 19 DD ?? ?? D0 0E A9 00 9D ?? ?? BD ?? ?? BC ?? ?? 99 ?? ?? DE ?? ?? 4C END
-
 (JCH_NewPlayer_V17)
 A5 ?? 48 A5 ?? 48 A2 02 BD ?? ?? D0 03 4C ?? ?? BD ?? ?? D0 03 4C ?? ?? C9 02 F0 06 DE ?? ?? 4C END
-
 (JCH_NewPlayer_V18)
 A5 ?? 48 A5 ?? 48 BD ?? ?? D0 03 4C ?? ?? BD ?? ?? 30 17 BD ?? ?? F0 59 DD ?? ?? D0 26 A9 ?? 9D END
-
 (JCH_NewPlayer_V19)
 4C ?? ?? DE ?? ?? 4C ?? ?? DE ?? ?? BD ?? ?? 85 ?? BD ?? ?? 85 ?? A0 00 98 9D ?? ?? B1 ?? 10 0F END
-
 (JCH_NewPlayer_V20)
 48 A5 ?? 48 CE ?? ?? 10 1D AD ?? ?? 8D ?? ?? C9 02 B0 13 AC ?? ?? B9 ?? ?? 8D ?? ?? CE ?? ?? 10 05 A9 END
-
 (JCH_NewPlayer_V0x)
 98 99 00 D4 C8 C0 19 D0 F8 A9 88 8D 04 D4 8D 0B D4 8D 12 D4 A9 ?? 8D 05 D4 8D 0C D4 AND 8D 13 D4 A9 END
 
@@ -810,6 +820,9 @@ Jeff/BullSID
 
 Jeff/XLarge
 60 A9 D7 8D 06 D4 A9 ?? 8D 0D D4 A9 ?? 8D 14 D4 A9 00 8D 05 D4 8D 0C D4 END
+
+Jer_Digi
+A0 00 B1 30 4A 4A 4A 4A 8D 18 D4 END
 
 Jeremy_Hall
 85 ?? A0 00 B1 ?? F0 ?? 0A AA BD ?? ?? 8D 00 D4 BD ?? ?? 8D 01 D4 AND 8D 04 D4 C8 D0 02 E6 ?? B1 ?? F0 ?? 0A AA BD ?? ?? 8D 07 D4 END
@@ -888,6 +901,10 @@ C9 A0 90 0C 0A 0A 0A 9D END
 
 Kris_Hatlelid
 BD ?? ?? AA B1 ?? 9D 02 D4 C8 B1 ?? 9D 03 D4 A0 0F B1 ?? 9D 05 D4 C8 B1 ?? 9D 06 D4 END
+48 20 ?? ?? 20 ?? ?? 68 0A A8 B1 ?? 85 ?? C8 B1 ?? 85 ?? 6C END
+(Kris_Hatlelid_Digi)
+A5 ?? F0 ?? A9 ?? 8D 07 DC A9 ?? 8D 18 D4 END
+A9 ?? 8D FA FF A9 ?? 4A 4A 4A 4A 8D 18 D4 END
 
 Kurt_Heiden
 0A 0A 0A AA BD ?? ?? 29 FE AA AD ?? ?? 0D ?? ?? F0 ?? 8E 04 D4 AD ?? ?? 0D ?? ?? F0 END
@@ -1019,7 +1036,7 @@ Symphonica/MDA
 SoundBox/MDA
 7D ?? ?? A8 B9 ?? ?? BC ?? ?? 99 04 D4 CA 30 ?? 4C ?? ?? AC ?? ?? AD ?? ?? D0 ?? AD ?? ?? 18 79 END
 
-Mat/MDA_digi
+Mat/MDA_Digi
 DC 29 10 C9 00 D0 F7 78 A9 00 8D 1A D0 A9 FF 8D 0D DC AD 0D DC A9 37 85 01 A9 EA A2 31 8D 15 03 8E 14 03 A9 7F 8D 0D DD A9 47 8D 18 03 A9 FE 8D 19 03 A9 00 8D 18 D4 END
 
 Matt_Furniss
@@ -1037,7 +1054,7 @@ AE ?? ?? BD ?? ?? BC ?? ?? 85 ?? 84 ?? AC ?? ?? B1 ?? AA BD ?? ?? 85 ?? 18 69 ??
 Maxx_Digi
 A9 34 85 01 B1 D1 4A 4A 4A 4A 09 10 85 DA END
 
-Mcee_digi
+Mcee_Digi
 48 8A 48 98 48 E6 FC AND 4A 4A 4A END
 
 Mega_Player
@@ -1064,6 +1081,9 @@ BD ?? ?? D0 ?? BD ?? ?? 99 05 D4 BD ?? ?? 99 06 D4 BD ?? ?? 99 04 D4 AD ?? ?? 30
 
 Mike/LSD
 8D ?? ?? B9 ?? ?? 8D 17 D4 B9 ?? ?? 8D ?? ?? 8D 16 D4 B9 ?? ?? 8D ?? ?? B9 ?? ?? 8D ?? ?? A2 AND 90 08 F0 06 8D ?? ?? 8D 16 D4 CE ?? ?? D0 ?? C8 4C END
+
+Mindcooler
+A0 00 B1 ?? C9 FF F0 ?? 85 ?? C8 B1 ?? A8 B1 ?? 8D 00 D4 END
 
 MiniMusic
 0A A8 B1 F8 48 C8 B1 F8 9D END
@@ -1097,6 +1117,7 @@ C9 C0 90 ?? 29 ?? 0A 0A 0A 9D ?? ?? C8 B1 ?? C9 ?? F0 END
 C9 FF D0 0E A9 00 95 ?? B5 ?? F0 04 D6 ?? 10 END
 C9 FF D0 17 A9 00 9D ?? ?? BD ?? ?? F0 05 DE ?? ?? 10 END
 4C ?? ?? C6 ?? A4 ?? BD ?? ?? 86 ?? 0A 0A 0A AA 8E ?? ?? BD ?? ?? 85 ?? BD ?? ?? 25 ?? 99 04 D4 END
+99 00 D4 C8 CA 10 F9 END
 
 MoN/FutureComposer
 FE ?? ?? BC ?? ?? B1 ?? C9 FF D0 ?? A9 00 9D ?? ?? BD ?? ?? F0 05 DE ?? ?? 10 03 END
@@ -1115,6 +1136,8 @@ BC ?? ?? BE ?? ?? 8E ?? ?? A5 ?? 29 0F 85 27 A5 ?? 29 70 4A 4A 4A 4A A6 ?? 95 ??
 A9 ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? 4C ?? ?? 8D ?? ?? 29 80 F0 0E AD ?? ?? 29 1F 9D ?? ?? FE ?? ?? 4C ?? ?? AD ?? ?? 29 40 F0 0E AD ?? ?? 29 3F 9D END
 (MoN/RWE)
 B0 05 BD ?? ?? D0 05 BD ?? ?? 29 FE 9D ?? ?? BD ?? ?? D0 0A AD ?? ?? C9 ?? D0 03 99 06 D4 BD END
+(MoN/Bantam)
+0A 0A 0A AA 8E ?? ?? BD ?? ?? A6 FF 9D ?? ?? 99 04 D4 A9 00 99 02 D4 A6 FF 9D END
 (MoN/Deenen_Digi)
 A2 00 F0 ?? 98 0A A8 B9 ?? ?? 8D ?? ?? B9 ?? ?? 8D END
 4A 4A 4A B8 50 ?? 4A 4A 4A 18 69 ?? 8D 18 D4 END
@@ -1209,7 +1232,7 @@ Olav_Moerkrid
 B9 ?? ?? 49 01 29 01 F0 ?? BD END
 F6 0C C8 B1 FC 30 0F C9 7F D0 E5 END
 
-OmegaSupreme_digi
+OmegaSupreme_Digi
 85 01 A0 00 B1 FB 4A 4A 4A 4A 8D 18 D4 A9 END
 
 Oliver_Buettner
@@ -1330,6 +1353,9 @@ Reflextracker
 Reiter_Digi
 A0 00 E6 01 B1 FB C6 01 0A 0A 0A 0A 29 F0 8D 01 DD END
 
+Rene_Romijn
+A9 00 9D ?? ?? BD ?? ?? D0 01 60 38 E9 01 0A 0A 0A 8D ?? ?? AA BD END
+
 Richard_Joseph
 BC ?? ?? B9 ?? ?? 29 F6 99 END
 
@@ -1390,8 +1416,14 @@ BC ?? ?? B1 ?? 30 ?? C8 C9 60 B0 ?? C9 50 B0 ?? 4C ?? ?? E9 50 END
 Samar/Raver_V1.0
 68 85 FC 68 85 FB 60 A5 FB 48 A5 FC 48 A2 00 20 ?? ?? E8 20 ?? ?? E8 END
 
-Sanyo_digi
+Sanyo_Digi
 AD 0D DD A9 ?? 4A 4A 4A 4A 8D 18 D4 A9 ?? 8D 18 03 END
+
+Scout_Digi
+48 4A 4A 4A 4A 8D 18 D4 A2 ?? CA D0 FD 68 29 0F 8D 18 D4 END
+
+Sentinel
+10 18 C9 FE D0 09 9D END
 
 Shaun_Southern
 F0 16 ?? ?? ?? 8D 00 D4 ?? ?? ?? 8D 01 D4 A9 00 8D 04 D4 A9 ?? 8D 04 D4 END
@@ -1434,6 +1466,9 @@ A9 ?? 9D ?? ?? 4C ?? ?? BD ?? ?? 9D 00 D4 BD ?? ?? 9D 01 D4 60 END
 (Soundmaster_V3.2)
 A9 ?? 9D ?? ?? 4C ?? ?? 18 BD ?? ?? 7D ?? ?? 9D ?? ?? BD ?? ?? 7D ?? ?? 9D ?? ?? BD ?? ?? 9D 00 D4 BD ?? ?? 9D 01 D4 60 END
 
+Softidea
+A5 ?? 85 ?? A2 00 18 D6 ?? D0 17 B5 ?? 9D 04 D4 END
+
 SoftwareAutomaticMouth
 69 88 4A 4A 4A 4A 8D 18 D4 C6 END
 
@@ -1470,11 +1505,11 @@ SoundMaker
 SoundMonitor
 BD ?? ?? 29 7F 4A 0D ?? ?? 9D ?? ?? 60 BD ?? ?? 10 ?? 18 B9 ?? ?? 7D ?? ?? 99 END
 (DUSAT/RockMon2)
-85 01 20 A0 80 AD C5 02 85 01 END
+48 29 0F AA CA 68 4A 4A 4A 4A 18 69 ?? 8D ?? ?? 4C END
 (MusicMaster_1)
 8D 0C CE 8D 18 D4 60 A0 17 A9 00 99 00 D4 99 F4 END
 (DUSAT/RockMon3)
-8D 0C CE 20 A9 9F 60 A0 17 A9 00 99 00 D4 99 F4 END
+4A 4A 4A 4A AA BD ?? ?? 8D ?? ?? BD ?? ?? 8D ?? ?? A2 ?? 8A 48 20 ?? ?? 68 CA D0 ?? A9 ?? 8D 18 D4 END
 (DUSAT/RockMon3h)
 8D 0C CE 20 70 CE 60 A0 17 A9 00 99 00 D4 99 F4 END
 (DUSAT/RockMon4)
@@ -1563,7 +1598,7 @@ DE ?? ?? D0 ?? BD ?? ?? 29 02 D0 ?? BC ?? ?? B9 ?? ?? 29 FE 99 04 D4 A9 ?? 9D EN
 StreetTuff_4K
 A5 ?? 0A AA BD ?? ?? 85 ?? BD ?? ?? 85 ?? AA 29 END
 
-StreetTuff_digi
+StreetTuff_Digi
 A9 ?? 4C ?? ?? A9 ?? 8D 16 D4 A9 ?? 8D 17 D4 A9 1F 8D 18 D4 A9 00 8D END
 
 Stuart_Taylor
@@ -1582,7 +1617,7 @@ Synth_Executor
 A0 03 D1 ?? F0 02 B0 19 A0 01 B1 ?? 18 7D END
 
 System6581
-BD ?? ?? 4A 4A 4A 4A DD ?? ?? D0 ?? BD ?? ?? 29 0F 9D ?? ?? 10 ?? FE END
+BD ?? ?? 4A 4A 4A 4A DD ?? ?? D0 ?? BD ?? ?? 29 0F 9D END
 
 Tamas_Revbiro
 0E D4 C8 C0 0B D0 F6 60 A2 00 A9 00 9D 00 D4 END
@@ -1626,6 +1661,9 @@ Toaster_Digi
 Tom_Snyder
 4A 4A 4A 4A A8 B9 ?? ?? 95 ?? BD ?? ?? 18 75 ?? 4A A8 B9 ?? ?? B0 04 4A 4A 4A 4A 29 0F 18 7D END
 
+Tommy_Dunbar
+C9 FE F0 AND C9 FF F0 AND C9 00 D0 AND A0 04 91 END
+
 Tonal_Kaos
 9D 02 D4 B9 ?? ?? 9D ?? ?? 9D 03 D4 B9 ?? ?? 9D ?? ?? 9D 05 D4 B9 ?? ?? 9D ?? ?? 9D 06 D4 60 A1 E0 F6 E0 D0 02 F6 E1 9D ?? ?? 60 A1 E0 F6 E0 END
 
@@ -1649,6 +1687,11 @@ BD ?? ?? 18 ?? ?? ?? 9D ?? ?? BD ?? ?? 69 ?? 9D ?? ?? DE ?? ?? 4C ?? ?? BD ?? ??
 
 Ubik's_Music
 A9 00 9D ?? ?? BC ?? ?? 99 04 D4 60 4C ?? ?? DE ?? ?? 10 F8 BC ?? ?? 8C ?? ?? A9 00 9D ?? ?? 9D ?? ?? A9 FF 9D ?? ?? BC ?? ?? BD ?? ?? 85 ?? BD END
+
+Ulrich_Muehl
+D0 02 E6 FA 8A 60 EE END
+D0 06 A9 00 AA 8D ?? ?? BD ?? ?? 8D 08 D4 END
+29 04 D0 0E AD ?? ?? 4A 8D 00 D4 AD END
 
 Ultimate
 8D 05 D4 A9 0F 8D 0C D4 A9 0F 8D 13 D4 A9 ?? 8D END
@@ -1724,6 +1767,9 @@ X-Byte
 XPMCK
 C6 05 06 05 18 A5 03 65 05 85 03 A5 04 69 END
 
+Yip_Digi
+B1 72 4A 4A 4A 4A 18 69 09 4A 8D 18 D4 EE END
+
 Yip_Megasound
 A9 01 8D ?? ?? A2 02 A9 01 9D ?? ?? A9 00 9D ?? ?? 9D ?? ?? CA 10 F0 A9 00 8D 04 D4 8D 0B D4 8D 12 D4 A9 0F 8D 18 D4 60 A9 00 8D ?? ?? 60 AD END
 
@@ -1779,6 +1825,9 @@ AD ?? ?? 8D 00 D4 AD ?? ?? 8D 01 D4 A9 ?? 0D ?? ?? 8D 04 D4 4C END
 
 ?Charlie_Barr/Data_East
 A8 B9 ?? ?? D0 ?? A9 ?? 9D ?? ?? BD ?? ?? D0 ?? A9 ?? 9D 04 D4 60 BD ?? ?? D0 ?? B9 ?? ?? 9D 00 D4 B9 ?? ?? 9D 01 D4 A9 ?? 9D 05 D4 END
+
+?Commodore
+8D ?? ?? BC ?? ?? BD ?? ?? C0 FF F0 10 8D 00 D4 END
 
 ?Dataapan
 AD ?? ?? ?? ?? ?? ?? ?? ?? F0 01 60 ?? ?? ?? F0 11 A9 00 ?? ?? ?? A8 B1 FB ?? ?? ?? E6 FB D0 02 END
@@ -1846,8 +1895,8 @@ CA CA 88 10 E2 A9 03 8D END
 ?Summergames/Epyx
 A2 17 A9 00 9D 00 D4 CA 10 FA A9 21 8D 05 D4 8D 0C D4 8D 13 D4 A9 84 8D 06 D4 8D 0D D4 8D 14 D4 END
 
-?TheSpy_digi
-AD 00 DE 4A 4A 4A 4A 8D 18 D4 0A 0A 0A 0A 85 02 END
+?TheSpy_Digi
+B1 ?? 29 0F AA A9 01 2C 0D DD F0 FB 8E 18 D4 END
 
 ?Tork/Pulsar
 B1 02 C9 FE F0 3A C9 FF F0 3E C9 FD F0 24 C9 END
@@ -1873,10 +1922,13 @@ A2 02 A0 08 B1 ?? 9D 00 D4 C8 E8 B1 ?? 9D 00 D4 C8 E8 E8 B1 ?? 9D 00 D4 C8 E8 B1
 ?Unknown_7
 60 D0 03 A2 00 60 C9 01 D0 03 A2 END
 
-?Unknown_digi_1
+?Unknown_8
+48 29 0F A8 B9 AND 68 4A 4A 4A 4A 49 07 END
+
+?Unknown_Digi_1
 D0 38 AD 0D DD F0 FB B1 5B 4A 4A 4A 4A 8D 18 D4 END
 
-?Unknown_digi_2
+?Unknown_Digi_2
 8E 53 0F A0 00 B1 FB 4A 4A 4A 4A 8D 18 D4 END
 
 ?Unknown_Kane
