--- a/jsidplay2service/pom.xml
+++ b/jsidplay2service/pom.xml
@@ -30,9 +30,9 @@
 				the JBoss stack of the Java EE 6 APIs). You can actually use this stack with 
 				any version of JBoss EAP that implements Java EE 6. -->
 			<dependency>
-				<groupId>org.jboss.bom.eap</groupId>
+				<groupId>org.jboss.bom</groupId>
 				<artifactId>jboss-javaee-6.0-with-tools</artifactId>
-				<version>6.3.0.GA</version>
+				<version>1.0.7.Final</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
